# RustBoy

./: .gitignore  Cargo.toml  LICENSE  Makefile  reg.json
src/: bootrom.rs  bus.rs  cartridge.rs  constant.rs  cpu.rs  emulator.rs  gameboy.rs  gb.rs  interrupt.rs  joypad.rs  lib.rs  main.rs  memory.rs  opcode.rs  ppu.rs  rom.rs  timer.rs  traits.rs  util.rs
src/io/: apu.rs  interrupt.rs  joypad.rs  mod.rs  ppu.rs  serial.rs  timer.rs
src/mbc/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  no_mbc.rs
tests/: cpu_test.rs  opcode_test.rs  rom_test.rs  rom_test_single.rs
tests/common/: fixture.rs  mock.rs  mod.rs
