[package]
name = "rust_boy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambassador = "0.3.1"
anyhow = "1.0.57"
bevy = "0.8.0"
bitvec = "1.0.0"
log = "0.4.17"
mockall = "0.11.1"
once_cell = "1.10.0"
rstest = "0.13.0"
speculate = "0.1.2"
