[package]
name = "rust_boy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambassador = "0.3.5"
anyhow = "1.0.75"
bevy = { version = "0.12.0" }
bevy_tiled_camera = "0.8.0"
bitvec = "1.0.1"
image = "0.24.7"
log = "0.4.20"
mockall = "0.11.4"
once_cell = "1.18.0"
rstest = "0.18.2"
speculate = "0.1.2"
